[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/img/sprites/Player/Blasto_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://assets/audio/sfx/Punches_SFX/Punch 1.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/audio/sfx/Carnifex_SFX/Carnifex 01.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/Scripts/Player/Player.gd" type="Script" id=5]
[ext_resource path="res://assets/audio/sfx/Blasto_SFX/Blasto_Colpito.mp3" type="AudioStream" id=6]
[ext_resource path="res://assets/audio/sfx/Blasto_SFX/Blasto_Morte.mp3" type="AudioStream" id=7]

[sub_resource type="Animation" id=1]
resource_name = "attack"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("SpritePivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.28 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.28 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("PunchSFX")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 2 )
} ],
"times": PoolRealArray( 0.28 )
}

[sub_resource type="Animation" id=2]
resource_name = "died"
length = 1.4
tracks/0/type = "value"
tracks/0/path = NodePath("SpritePivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.428672, 0.890033 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "death"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("PunchSFX")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("SpritePivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 12, 13 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("PunchSFX")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 6 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=4]
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("SpritePivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}

[sub_resource type="Animation" id=5]
length = 0.8
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("SpritePivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 10 ]
}

[sub_resource type="Animation" id=6]
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("SpritePivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("GunSFX")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0.5 )
}

[sub_resource type="CapsuleShape2D" id=12]
radius = 16.3888

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 52.9171, 6.82137 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 11.9404, 21.8633 )

[node name="Player" type="KinematicBody2D" groups=["pausable", "player"]]
scale = Vector2( 2.13561, 2.13561 )
collision_mask = 5
script = ExtResource( 5 )
debug_mode = true
speed = 200

[node name="SpritePivot" type="Position2D" parent="."]
position = Vector2( 6.5555, 0 )

[node name="Sprite" type="Sprite" parent="SpritePivot"]
position = Vector2( 11.7063, -1.40475 )
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 1 )
hframes = 3
vframes = 6
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 1 )
anims/died = SubResource( 2 )
anims/hit = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/move = SubResource( 5 )
anims/shoot = SubResource( 6 )

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 12 )

[node name="Pivot" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="Pivot"]
position = Vector2( 75.3883, 0.936502 )

[node name="AttackCollision" type="Area2D" parent="Pivot"]
position = Vector2( 71.6423, -1.873 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/AttackCollision"]
scale = Vector2( 1, 1 )
shape = SubResource( 8 )

[node name="PlayerHitBox" type="Area2D" parent="Pivot"]
position = Vector2( -6.08725, 0.9365 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/PlayerHitBox"]
position = Vector2( 0, -0.773 )
shape = SubResource( 11 )

[node name="GunSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="PunchSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "SFX"

[node name="StateLabel" type="Label" parent="."]
visible = false
margin_left = -64.6671
margin_top = -154.607
margin_right = -24.6671
margin_bottom = -140.607
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CooldownAttackTimer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]
[connection signal="area_entered" from="Pivot/AttackCollision" to="." method="_on_AttackCollision_area_entered"]
[connection signal="area_exited" from="Pivot/AttackCollision" to="." method="_on_AttackCollision_area_exited"]
[connection signal="timeout" from="CooldownAttackTimer" to="." method="_on_CooldownAttackTimer_timeout"]
